# app/Http/Requests/Clientes/UpdateClienteRequest.php
@@ -1,0 +1,73 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Http\Requests\Clientes;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Validation\Rule;
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Http\Exceptions\HttpResponseException;
+
+class UpdateClienteRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'nome' => [
+                'required',
+                'string',
+                'max:100',
+            ],
+
+            'email' => [
+                'required',
+                'email',
+                'max:200',
+                Rule::unique('clientes', 'email')->ignore($this->route('id')),
+            ],
+
+            'telefone' => [
+                'required',
+                'regex:/^[0-9]+$/',
+            ],
+
+            'id' => [
+                'required',
+                'exists:clientes,id',
+            ],
+        ];
+    }
+
+    public function messages(): array
+    {
+        return [
+            'nome.required' => 'O nome é obrigatório',
+            'nome.unique' => 'Este nome já está cadastrado',
+            'email.required' => 'O email é obrigatório',
+            'email.email' => 'Email inválido',
+            'email.unique' => 'Este email já está cadastrado',
+            'telefone.regex' => 'O telefone deve ser numérico',
+        ];
+    }
+
+    protected function failedValidation(Validator $validator)
+    {
+        throw new HttpResponseException(response()->json([
+            'status' => 'error',
+            'errors' => $validator->errors()
+        ], 422));
+    }
+
+    protected function prepareForValidation(): void
+    {
+        $this->merge([
+            'id' => $this->route('id'),
+        ]);
+    }
+}
